modificacion del properties a un MySql remoto

--- a/src/main/resources/templates/user-form/user-view.html
+++ b/src/main/resources/templates/user-form/user-view.html
@@ -51,12 +51,12 @@
 <body>
 	<div class="container">
 		<div class="mx-auto col-sm-8 main-section" id="myTab" role="tablist">
-			<div>
-				<p>[[${#httpServletRequest.remoteUser}]]!</p>
-			</div>
-			<div sec:authorize="isAuthenticated()">
-				Authenticated as <span sec:authentication="name"></span>
-			</div>
+<!-- 			<div> -->
+<!-- 				<p>[[${#httpServletRequest.remoteUser}]]!</p> -->
+<!-- 			</div> -->
+<!-- 			<div sec:authorize="isAuthenticated()"> -->
+<!-- 				Authenticated as <span sec:authentication="name"></span> -->
+<!-- 			</div> -->
 			<ul class="nav nav-tabs justify-content-end">
 				<li class="nav-item"><a class="nav-link"
 					th:classappend="${listTab}" id="list-tab" data-toggle="tab"
