Ultimos arreglos de permisos

--- a/src/main/resources/templates/user-form/user-view.html
+++ b/src/main/resources/templates/user-form/user-view.html
@@ -50,6 +50,10 @@
 </head>
 <body>
 	<div class="container">
+		<div >
+			<div th:object="${userForm}"></div>
+			<p th:field="${userForm.firstName}"></p>
+		</div>
 		<div class="mx-auto col-sm-8 main-section" id="myTab" role="tablist">
 <!-- 			<div> -->
 <!-- 				<p>[[${#httpServletRequest.remoteUser}]]!</p> -->
@@ -58,7 +62,7 @@
 <!-- 				Authenticated as <span sec:authentication="name"></span> -->
 <!-- 			</div> -->
 			<ul class="nav nav-tabs justify-content-end">
-				<li class="nav-item"><a class="nav-link"
+				<li class="nav-item" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"><a class="nav-link"
 					th:classappend="${listTab}" id="list-tab" data-toggle="tab"
 					href="#list" role="tab" aria-controls="list" aria-selected="false">List</a>
 				</li>
