--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
                 <div class="col-12 user-img">
                     <img src="static/img/user.png" th:src="@{/img/user.png}"/>
                 </div>
-                <form class="col-12" th:action="@{/login}" method="post">
+                <form class="col-12" th:action="@{/users/login}" method="post">
                     <div class="form-group" id="user-group">
                         <input type="text" class="form-control" placeholder="Nombre de usuario" name="username"/>
                     </div>
@@ -36,7 +36,7 @@
                 </form>
                 <div class="col-12 forgot">
                     <a href="#">Recordar contrasena?</a>
-                    <a th:href="@{/signup}">Registrate</a>
+                    <a th:href="@{/users/signup}">Registrate</a>
                 </div>
                 <div th:if="${param.error}" class="alert alert-danger" role="alert">
 		            Invalid username and password.
