--- a/src/main/resources/templates/user-form/user-form.html
+++ b/src/main/resources/templates/user-form/user-form.html
@@ -1,5 +1,5 @@
 <div th:with="disableFields=!${editMode} and ${#authorization.expression('hasRole(''ROLE_USER'')')}">
-<form class="form" role="form" autocomplete="off" th:object="${userForm}" th:action="${signup} ?@{/signup} :(${editMode} ?@{/editUser} :@{/userForm})" method="post">
+<form class="form" autocomplete="off" th:object="${userForm}" th:action="${signup} ?@{/users/signup} :(${editMode} ?@{/users/editUser} :@{/users/userForm})" method="post">
 	
 	<input class="form-control" type=hidden th:field="${userForm.id} " th:if="${editMode}">
 	
@@ -63,7 +63,7 @@
 	</div>
 	<div class="form-group row">
 		<div class="col-lg-12 text-center">
-			<a class="btn btn-secondary"  th:href="@{'/userForm/cancel'}">Cancelar</a>
+			<a class="btn btn-secondary"  th:href="@{'/users/userForm/cancel'}">Cancelar</a>
 			<button type="button" class="btn btn-secondary" data-toggle="modal" th:if="${editMode}" data-target="#changePasswordModal">Change Password</button>
 			<input type="submit" class="btn btn-primary" value="Save Changes" th:value="${editMode}?'Guardar Cambios':'Create Usuario'">
 		</div>                                                                
