--- a/src/main/resources/templates/user-form/user-list.html
+++ b/src/main/resources/templates/user-form/user-list.html
@@ -1,4 +1,5 @@
 <div class="table-responsive">
+<a type="button" class="btn btn-primary" th:href="@{/corte/formcorte}">Registrar Nuevo corte</a>
 	<table id="userList"
 		class="table table-bordered table-hover table-striped">
 		<thead class="thead-light">
@@ -20,14 +21,20 @@
 				<td th:text="${user.email}"></td>
 				<td><span
 					th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')} or (${#authorization.expression('hasRole(''ROLE_USER'')')} and ${#httpServletRequest.remoteUser==user.username})">
-						<a href="#" th:href="@{'/editUser/'+ ${user.id}}"><i
+						<a href="#" th:href="@{'/users/editUser/'+ ${user.id}}"><i
 							class="fas fa-edit"></i></a>
 				</span> | <span
 					th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
 						<a href="#"
 						th:onclick="'javascript:confirmDelete(\''+ ${user.id} +'\');'"><i
 							class="fas fa-user-times"></i></a>
-				</span></td>
+				</span>| <span
+					th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+						<a href="#"
+						th:href="@{'/users/editUser/'+ ${user.id}}"><i
+							class="fas fa-cut"></i></a>
+				</span></td></td>
+				
 			</tr>
 		</tbody>
 	</table>
